# gdghackathon

./: README.md  package-lock.json  package.json
backend/: .env  debug_corpus.py  debug_loader.py  list_conversations.py  list_vertex_models.py  main.py  pyproject.toml  requirements.txt  server_log.txt  test_adk_memory.py  test_models.py  test_multi_user.py  test_rag_integration.py  test_retrieval.py
backend/models/: conversation.py  message.py  user.py
backend/services/: conversation_service.py  database.py  feedback_agent.py  message_service.py  notes.py  quiz.py  rag.py  security_service.py  user_service.py
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js
frontend/component/Sidebar/: sidebar.css
frontend/components/: QuizDisplay.css  QuizDisplay.jsx
frontend/components/Chatbox/: Chatbox.module.css  ConversationSelector.tsx
frontend/pages/home/: home.css  home.jsx
frontend/pages/video/: video.jsx  video.jsx.backup
frontend/runtime/: fastapiRuntime.ts
frontend/src/: App.jsx  AuthContext.tsx  LoginPage.css  LoginPage.tsx  ProtectedRoute.tsx  api.ts  fonts.css  index.css  main.jsx
frontend/src/components/: FeaturePill.tsx  HeroSection.tsx  Navbar.tsx  QuizDisplay.css  QuizDisplay.jsx
frontend/src/pages/: SignIn.tsx
frontend/src/services/: apiService.js
src/: index.css  main.jsx
src/component/Navbar/: navbar.css  navbar.jsx
src/component/Sidebar/: sidebar.css  sidebar.jsx
src/pages/home/: home.css  home.jsx
src/pages/pdf/: Pdf.css  Pdf.jsx
src/services/: apiService.js  mockApiService.js
(+22 files in other folders)
